--- a/frontend/src/css/style.css
+++ b/frontend/src/css/style.css
@@ -6,9 +6,9 @@
     text-decoration: none;
     box-sizing: border-box;
 }
-html, body, .root{
-    height: 100%;
-    width: 100%;
+html, body, #root, .App{
+    height: 100% !important;
+    width: 100% !important;
 }
 body{
     display: grid;
@@ -531,10 +531,13 @@ button{
     background-color: rgba(44, 59, 56, 1);
     min-height: 300px;
     width: 100%;
+    display: flex;
+    align-items: center;
 }
 .footer ul{
     width: 100%;
-    height: 100%;
+    height: 100% !important;
+    /* min-height: 300px; */
     display: flex;
     align-items: center;
     justify-content: space-evenly;
@@ -647,7 +650,7 @@ button{
 
     /*footer*/
     .footer{
-        min-height: 900px;
+        min-height: 700px;
     }
     .footer ul{
         flex-direction: column;
