--- a/frontend/src/css/header.css
+++ b/frontend/src/css/header.css
@@ -199,7 +199,7 @@
         align-items: center;
         flex-wrap: wrap;
         display: flex;
-        transition: 350ms;
+        transition: 1s;
 
         visibility: hidden;
         opacity: 0;
@@ -220,7 +220,7 @@
         display: flex;
         margin-right: 15px;
     }
-    .acti{
+    .active{
         visibility: visible !important;
         opacity: 1 !important;
         pointer-events: auto !important;
