--- a/frontend/src/css/header.css
+++ b/frontend/src/css/header.css
@@ -20,7 +20,7 @@
 .header .top ul{
     min-height: 30px;
     display: flex;
-    justify-content: space-around;
+    justify-content: left;
     align-items: center;
     text-align: center;
 }
@@ -56,19 +56,25 @@
 /*first li*/
 .header .bot{
     min-height: 60px;
-    border-bottom: .5px solid rgba(226, 226, 226, .5)
+    border-bottom: .5px solid rgba(226, 226, 226, .5);
+    background-color: #000 !important;
 }
 .header .bot ul{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
+    padding: 0 20px;
 }
 
 .header .bot ul .firstLi{
     display: flex;
 }
+.header .bot ul .firstLi .phoneNuumber h3 a:hover{
+    color: #ffec80 !important;
+}
 .header .bot ul .firstLi h3{
-    font-size: 23px;
+    font-size: 26px;
     line-height: 60px;
+    color: #fff;
 }
 .header .bot ul .firstLi div{
     display: flex;
@@ -139,7 +145,9 @@
     justify-content: space-between;
 }
 .header .bot ul .secLi ul li .link{
-    color:rgba(0, 0, 0, .4);
+    /* color:rgba(255, 255, 255, 0) !important;
+     */
+     color: #fff !important;
     font-weight: 600;
     font-size: 16px;
 }
@@ -187,7 +195,7 @@
         width: 100%;
     }
     .header .bot ul .secLi{
-        background-color: #fff;
+        background-color: #000;
         width: 100%;
         height: 300px;
         position: absolute;
