--- a/frontend/src/css/style.css
+++ b/frontend/src/css/style.css
@@ -126,7 +126,7 @@ button{
     background-color: #fff;
 }
 .container:nth-child(2n){
-    background-color: rgb(244, 249, 245);
+    background-color: rgb(244, 249, 245) !important;
 }
 
 /*container 1*/
@@ -188,9 +188,6 @@ button{
 }
 
 /*container2*/
-.container2{
-    background-color: rgb(244, 249, 245);
-}
 .container2 .threeBoxes{
     position: relative;
     top: -20px;
@@ -261,10 +258,7 @@ button{
 
 /*container3 - container4*/
 .container3{
-    background-color: #fff;
-}
-.container4{
-    background-color: rgb(244, 249, 245);
+    min-height: 450px;
 }
 .container4 ul li div{
     height: 100px !important;
@@ -304,7 +298,8 @@ button{
     margin: 5px;
 }
 .container3 ul li img{
-    height: 170px;
+    width: 190px;
+    /* height: 190px; */
     transition: 350ms;
 }
 .container4 ul li img{
